fixup! Update commiters list and fix spacing

--- a/landing-pages/site/assets/scss/_list-boxes.scss
+++ b/landing-pages/site/assets/scss/_list-boxes.scss
@@ -45,7 +45,7 @@ $card-margin: 20px;
     width: 20%;
   }
   @media (max-width: $tablet) {
-    padding: 1.5 * $card-margin;
+    padding: $card-margin / 2;
     width: 50%;
   }
   @media (max-width: $mobile) {
